fix: change blog image align

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -18,4 +18,12 @@ body {
 	color: var(--foreground);
 	background: var(--background);
 	font-family: Arial, Helvetica, sans-serif;
+
+	.blog {
+		p {
+			img {
+				@apply w-full max-w-lg mx-auto rounded-lg shadow-md;
+			}
+		}
+	}
 }
